--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Boost Service</title>
-  <base href="/">
+  <base href="/Boost-service">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="./assets/image/logotype.svg">
 </head>
